--- a/build.gradle
+++ b/build.gradle
@@ -9,28 +9,32 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
+}
 
 dependencies {
     // Spring dependencies
-    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
+    implementation 'org.springframework:spring-web:6.2.2'
+    implementation 'org.springframework:spring-webmvc:6.2.2'
+
+
     implementation 'org.codehaus.gmavenplus:gmavenplus-plugin:4.1.1'
-    implementation 'org.springframework:spring-web:7.0.0-M1'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.2'
     implementation 'com.h2database:h2:2.3.232'
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.4.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.2'
-    implementation 'org.springframework:spring-webflux:7.0.0-M1'
-    implementation 'org.springframework:spring-web:6.2.2'
-    testImplementation 'io.projectreactor:reactor-test:3.7.2'
-    implementation 'io.projectreactor:reactor-core:3.7.2'
-    implementation 'org.springframework.data:spring-data-mongodb:5.0.0-M1'
+
+
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
     compileOnly 'org.projectlombok:lombok:1.18.36'
 
     // Spock test dependencies
+    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
     testImplementation 'org.spockframework:spock-core:2.4-M5-groovy-4.0'
     testImplementation 'org.apache.groovy:groovy:4.0.25'
 
