--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java'
     id 'groovy'
+    id 'application'
+    id 'com.google.cloud.tools.jib' version '3.3.2'
+
 }
 
 group = 'org.example'
@@ -11,6 +14,30 @@ repositories {
 }
 tasks.withType(JavaCompile) {
     options.compilerArgs << "-parameters"
+}
+
+application {
+    mainClass = 'org.example.Main'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': application.mainClass
+        )
+    }
+}
+
+jib {
+    from {
+        image = 'openjdk:17-jdk-slim'
+    }
+    to {
+        image = 'lenore66/app:latest'
+    }
+    container {
+        mainClass = application.mainClass
+    }
 }
 
 dependencies {
